# few-shot-learning-torchjd

./: .gitignore  README.md  main.py  model.onnx  pyproject.toml
src/few_shot_learning_torchjd/: __init__.py  criterion.py  model.py
